--- a/city.html
+++ b/city.html
@@ -22,7 +22,7 @@
     </nav>
   </aside>
   <main role="main">
-    <img src="./photos/city/2018-02-26-16.19.09" alt="">
+    <img src="./photos/city/2018-02-26-16.19.09.jpg" alt="">
   </main>
 </body>
 </html>
