--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <nav>
       <ul>
         <li>
-          <a href="#">Человек</a>
+          <a href="./people.html">Человек</a>
         </li>
         <li>
-          <a href="#">Город</a>
+          <a href="./city.html">Город</a>
         </li>
       </ul>
     </nav>
