--- a/people.html
+++ b/people.html
@@ -22,7 +22,7 @@
     </nav>
   </aside>
   <main role="main">
-    <img src="./photos/people/36386874514_0ee7078f59_o" alt="">
+    <img src="./photos/people/36386874514_0ee7078f59_o.jpg" alt="">
   </main>
 </body>
 </html>
